[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-ltspice"
version = "0.2.3"
description = "LTspice driver for sim — bundled .asc/.net/.raw/.log library + driver in one wheel."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
keywords = ["ltspice", "spice", "eda", "simulation", "schematic", "netlist", "circuit", "sim-cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # Versioned pin against PyPI sim-cli-core 0.3.0 (pure-plugin architecture
    # release). Replaces an earlier `sim-cli-core @ git+...sim-cli@main` pin
    # that was clobbering editable installs on the legacy plugin-install
    # upgrade path
    # — see sim-cli#80.
    "sim-cli-core>=0.3",
    # numpy is a runtime requirement of the bundled .raw / .log parsers
    # (formerly the standalone sim-ltspice library, folded in v0.2.0).
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]
# Optional pandas accelerator for RawRead → DataFrame conversion.
dataframe = ["pandas>=2.0"]

[project.entry-points."sim.drivers"]
ltspice = "sim_plugin_ltspice:LTspiceDriver"

[project.entry-points."sim.skills"]
ltspice = "sim_plugin_ltspice:skills_dir"

[project.entry-points."sim.plugins"]
ltspice = "sim_plugin_ltspice:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-ltspice"
Issues = "https://github.com/svd-ai-lab/sim-plugin-ltspice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_ltspice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires LTspice installed on the host"]
